--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -24,7 +24,7 @@
         android:layout_width="246dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:text="Button"
+        android:text="Catch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
